force-app/main/default/objects/Contact/fields/AreaAtuacao__c.field-meta.xml
<CustomField>
    <fullName>AreaAtuacao__c</fullName>
    <label>Área de Atuação</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TI</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Operações</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>