force-app/main/default/objects/Contact/fields/Evento__c.field-meta.xml
<CustomField>
    <fullName>Evento__c</fullName>
    <label>Evento</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NRF 2026</fullName>
            </value>
            <value>
                <fullName>Pós NRF ABRAS</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação (ACAPS)</fullName>
            </value>
            <value>
                <fullName>Fórum SA+</fullName>
            </value>
            <value>
                <fullName>Smart Market</fullName>
            </value>
            <value>
                <fullName>APAS Show</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação AGAS</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação (AMIS)</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação (ASSURN)</fullName>
            </value>
            <value>
                <fullName>ACAPS</fullName>
            </value>
            <value>
                <fullName>ABRAS&apos;26</fullName>
            </value>
            <value>
                <fullName>Super Minas</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação (ACESU)</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação APRAS</fullName>
            </value>
            <value>
                <fullName>Jantar Dia dos Supermercados</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação</fullName>
            </value>
            <value>
                <fullName>Neogrid Summit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>