force-app/main/default/objects/Contact/fields/Inscrito_Bluetimes__c.field-meta.xml
<CustomField>
    <fullName>Inscrito_Bluetimes__c</fullName>
    <label>Inscrito Bluetimes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>