force-app/main/default/objects/Contact/fields/Temperamento__c.field-meta.xml
<CustomField>
    <fullName>Temperamento__c</fullName>
    <label>Temperamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Temperamento</valueSetName>
    </valueSet>
</CustomField>